# resume_ai

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  app.py  auth.py  docker-compose.yaml  flask-app-deployment.yaml  flask-app-service.yaml  flask-nginx-deployment.yaml  forms.py  nginx-configmap.yaml  nginx.conf  pyproject.toml
src/resume_bot/: auth.py
static/: styles.css
templates/: chat.html  login.html
